[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/casper clone.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/casper.gd" type="Script" id=3]
[ext_resource path="res://Scenes/EnemyStats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Shadows/MediumShadow.png" type="Texture" id=5]
[ext_resource path="res://Scenes/PlayerDetectionZone.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Animate",
"speed": 6.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 7.66795

[sub_resource type="CapsuleShape2D" id=6]
radius = 13.8551
height = 14.881

[sub_resource type="CircleShape2D" id=7]
radius = 49.4331

[node name="casper" type="KinematicBody2D"]
scale = Vector2( 0.75, 0.75 )
collision_layer = 16
collision_mask = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "Animate"
playing = true
offset = Vector2( 0, -18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 8 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
visible = false
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -0.662167, -8.87301 )
shape = SubResource( 6 )

[node name="EnemyStats" parent="." instance=ExtResource( 4 )]
max_health = 10
max_attack_points = 5

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2( 1.7818, -10.0969 )
shape = SubResource( 7 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="EnemyStats" to="." method="_on_EnemyStats_no_health"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]
